[p5] testcase fixing
